--- a/ES6_QLNCGD/app/views/index..html
+++ b/ES6_QLNCGD/app/views/index..html
@@ -207,9 +207,9 @@
                 <!-- <input type="text" class="form-control" id="tencty" placeholder="Nhập tên công ty" value="" required> -->
                 <select class="custom-select d-block w-100" id="loai" required>
                   <option value="">Chọn loại người dùng</option>
-                  <option value="0">Học Sinh</option>
-                  <option value="1">Nhân Viên</option>
-                  <option value="2">Khách Hàng</option>
+                  <option value="loai0">Học Sinh</option>
+                  <option value="loa1">Nhân Viên</option>
+                  <option value="loai2">Khách Hàng</option>
                   
                 </select>
                 <div id="invalidLoai" class="invalid-feedback">
